[package]
name = "huione-accounts-cluster-bench"
publish = false
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
clap = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
huione-account-decoder = { workspace = true }
huione-clap-utils = { workspace = true }
huione-cli-config = { workspace = true }
huione-client = { workspace = true }
huione-faucet = { workspace = true }
huione-gossip = { workspace = true }
huione-logger = { workspace = true }
huione-measure = { workspace = true }
huione-net-utils = { workspace = true }
huione-rpc-client = { workspace = true, features = ["default"] }
huione-runtime = { workspace = true }
huione-sdk = { workspace = true }
huione-streamer = { workspace = true }
huione-transaction-status = { workspace = true }
huione-version = { workspace = true }
hpl-token = { workspace = true, features = ["no-entrypoint"] }

[dev-dependencies]
huione-core = { workspace = true }
huione-local-cluster = { workspace = true }
huione-test-validator = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
