[package]
name = "huione-bench-tps"
publish = false
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
clap = { workspace = true }
crossbeam-channel = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
serde_json = { workspace = true, features = ["arbitrary_precision"] }
serde_yaml = { workspace = true }
huione-clap-utils = { workspace = true }
huione-cli-config = { workspace = true }
huione-client = { workspace = true }
huione-connection-cache = { workspace = true }
huione-core = { workspace = true }
huione-faucet = { workspace = true }
huione-genesis = { workspace = true }
huione-gossip = { workspace = true }
huione-logger = { workspace = true }
huione-measure = { workspace = true }
huione-metrics = { workspace = true }
huione-net-utils = { workspace = true }
huione-rpc = { workspace = true }
huione-rpc-client = { workspace = true }
huione-rpc-client-api = { workspace = true }
huione-rpc-client-nonce-utils = { workspace = true }
huione-runtime = { workspace = true }
huione-sdk = { workspace = true }
huione-streamer = { workspace = true }
huione-thin-client = { workspace = true }
huione-tpu-client = { workspace = true }
huione-version = { workspace = true }
thiserror = { workspace = true }
ethnum = { workspace = true }

[dev-dependencies]
serial_test = { workspace = true }
huione-local-cluster = { workspace = true }
huione-test-validator = { workspace = true }
tempfile = "3.5.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
