[package]
name = "huione-clap-v3-utils"
description = "Huione utilities for the clap v3"
documentation = "https://docs.rs/huione-clap-utils"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
chrono = { workspace = true, features = ["default"] }
clap = { version = "3.2.23", features = ["cargo"] }
rpassword = { workspace = true }
huione-perf = { workspace = true }
huione-remote-wallet = { workspace = true }
huione-sdk = { workspace = true }
huione-zk-token-sdk = { workspace = true }
thiserror = { workspace = true }
tiny-bip39 = { workspace = true }
uriparse = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lib]
name = "huione_clap_v3_utils"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
