[package]
name = "huione-cli"
description = "Blockchain, Rebuilt for Scale"
documentation = "https://docs.rs/huione-cli"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bincode = { workspace = true }
bs58 = { workspace = true }
clap = { workspace = true }
console = { workspace = true }
const_format = { workspace = true }
criterion-stats = { workspace = true }
crossbeam-channel = { workspace = true }
ctrlc = { workspace = true, features = ["termination"] }
hex = { workspace = true }
humantime = { workspace = true }
log = { workspace = true }
num-traits = { workspace = true }
pretty-hex = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "brotli", "deflate", "gzip", "rustls-tls", "json"] }
semver = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true, features = ["arbitrary_precision"] }
huione-account-decoder = { workspace = true }
huione-address-lookup-table-program = { workspace = true }
huione-bpf-loader-program = { workspace = true }
huione-clap-utils = { workspace = true }
huione-cli-config = { workspace = true }
huione-cli-output = { workspace = true }
huione-client = { workspace = true }
huione-config-program = { workspace = true }
huione-faucet = { workspace = true }
huione-logger = { workspace = true }
huione-program-runtime = { workspace = true }
huione-pubsub-client = { workspace = true }
huione-remote-wallet = { workspace = true, features = ["default"] }
huione-rpc-client = { workspace = true, features = ["default"] }
huione-rpc-client-api = { workspace = true }
huione-rpc-client-nonce-utils = { workspace = true }
huione-sdk = { workspace = true }
huione-tpu-client = { workspace = true, features = ["default"] }
huione-transaction-status = { workspace = true }
huione-version = { workspace = true }
huione-vote-program = { workspace = true }
huione_rbpf = { workspace = true }
hpl-memo = { workspace = true, features = ["no-entrypoint"] }
thiserror = { workspace = true }
tiny-bip39 = { workspace = true }

[dev-dependencies]
huione-streamer = { workspace = true }
huione-test-validator = { workspace = true }
tempfile = { workspace = true }

[[bin]]
name = "huione"
path = "src/main.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
