[package]
name = "huione-entry"
description = "HUIONE Entry"
documentation = "https://docs.rs/huione-poh"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bincode = { workspace = true }
crossbeam-channel = { workspace = true }
dlopen = { workspace = true }
dlopen_derive = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
huione-measure = { workspace = true }
huione-merkle-tree = { workspace = true }
huione-metrics = { workspace = true }
huione-perf = { workspace = true }
huione-rayon-threadlimit = { workspace = true }
huione-sdk = { workspace = true }

[dev-dependencies]
matches = { workspace = true }
huione-logger = { workspace = true }

[lib]
crate-type = ["lib"]
name = "huione_entry"

[[bench]]
name = "entry_sigverify"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
