[package]
name = "huione-faucet"
description = "HUIONE Faucet"
documentation = "https://docs.rs/huione-faucet"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bincode = { workspace = true }
byteorder = { workspace = true }
clap = { workspace = true }
crossbeam-channel = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
huione-clap-utils = { workspace = true }
huione-cli-config = { workspace = true }
huione-logger = { workspace = true }
huione-metrics = { workspace = true }
huione-sdk = { workspace = true }
huione-version = { workspace = true }
hpl-memo = { workspace = true, features = ["no-entrypoint"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[lib]
crate-type = ["lib"]
name = "huione_faucet"

[[bin]]
name = "huione-faucet"
path = "src/bin/faucet.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
