[package]
name = "huione-geyser-plugin-interface"
description = "The HUIONE Geyser plugin interface."
documentation = "https://docs.rs/huione-geyser-plugin-interface"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
log = { workspace = true }
huione-sdk = { workspace = true }
huione-transaction-status = { workspace = true }
thiserror = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
