[package]
name = "huione-keygen"
description = "HUIONE key generation utility"
documentation = "https://docs.rs/huione-keygen"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bs58 = { workspace = true }
clap = { version = "3.1.5", features = ["cargo"] }
dirs-next = { workspace = true }
num_cpus = { workspace = true }
huione-clap-v3-utils = { workspace = true }
huione-cli-config = { workspace = true }
huione-remote-wallet = { workspace = true, features = ["default"] }
huione-sdk = { workspace = true }
huione-version = { workspace = true }
tiny-bip39 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[[bin]]
name = "huione-keygen"
path = "src/keygen.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
