[package]
name = "huione-merkle-tree"
description = "HUIONE Merkle Tree"
documentation = "https://docs.rs/huione-merkle-tree"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
fast-math = { workspace = true }
huione-program = { workspace = true }

# This can go once the SBF toolchain target Rust 1.42.0+
[target.bpfel-unknown-unknown.dependencies]
matches = { workspace = true }

[dev-dependencies]
hex = { workspace = true }

[lib]
crate-type = ["lib"]
name = "huione_merkle_tree"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
