[package]
name = "huione-metrics"
description = "HUIONE Metrics"
documentation = "https://docs.rs/huione-metrics"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
crossbeam-channel = { workspace = true }
gethostname = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "brotli", "deflate", "gzip", "rustls-tls", "json"] }
huione-sdk = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
rand = { workspace = true }
serial_test = { workspace = true }

[lib]
name = "huione_metrics"

[[bench]]
name = "metrics"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
